[package]
name = "jsonwebtoken-google"
version = "0.1.6"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2018"
description = "parse and validate google jwt token with jsonwebtoken"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/jsonwebtoken-google"
readme = "README.md"
keywords = ["google", "jwt", "sign", "token", "android"]
repository = "https://github.com/cheetah-games/jsonwebtoken-google"

[dependencies]
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
headers = "0.3.9"
tokio = "1.0"
httpmock = { version = "0.6.2", optional = true }
rustls = { version = "0.22.1" }
base64 = { version = "0.21.5", optional = true }
thiserror = "1.0.30"
rsa = "0.9.10"
rand = { version = "0.8.7", optional = true }

[dev-dependencies]
httpmock = { version = "0.6.2" }
base64 = { version = "0.21.5" }
rand = "0.8.7"

[features]
test-helper = ["dep:httpmock", "dep:base64", "dep:rand"]
