[package]
name = "jsonwebtoken-google2"
version = "0.2.0"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2024"
description = "parse and validate google jwt token with jsonwebtoken"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/jsonwebtoken-google"
readme = "README.md"
keywords = ["google", "jwt", "sign", "token", "android"]
repository = "https://github.com/cheetah-games/jsonwebtoken-google"

[dependencies]
jsonwebtoken = "10.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
headers = "0.4.1"
tokio = "1.0"
httpmock = { version = "0.8.3", optional = true }
rustls = { version = "0.23.42" }
base64 = { version = "0.22.1", optional = true }
thiserror = "2.0.18"
rsa = "0.9.10"
rand = { version = "0.8.7", optional = true }

[dev-dependencies]
httpmock = { version = "0.8.3" }
base64 = { version = "0.22.1" }
rand = "0.8.7"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }

[features]
test-helper = ["dep:httpmock", "dep:base64", "dep:rand"]
